load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "discover.go",
        "gateway.go",
        "gatewaylistener.go",
        "messages.go",
        "utils.go",
    ],
    importpath = "github.com/whs/go-aqaramqtt/aqara",
    visibility = ["//visibility:public"],
)
